--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start"
+    "start": "npm start"
   },
   "keywords": [],
   "author": "",
